fixed spacing

--- a/scss/components/exhibits.scss
+++ b/scss/components/exhibits.scss
@@ -23,4 +23,7 @@
     line-height: 1.2;
     margin: 0;
   }
+  &__value {
+    font-size: 12px;
+  }
 }
