--- a/scss/components/table.scss
+++ b/scss/components/table.scss
@@ -31,12 +31,15 @@
         background: lightgray;
       }
       &__cell {
-        flex: 1;
         border-right: 1px solid black;
         padding: 8px;
         display: flex;
         justify-content: center;
         align-items: center;
+
+        &.background-orange {
+          background: $orange;
+        }
 
         &.width--20 {
           width: 20%;
