--- a/scss/pages/page12.scss
+++ b/scss/pages/page12.scss
@@ -47,7 +47,8 @@
       &__cell {
         width: 24%;
         background: #ffe8c8;
-        padding: 30px 15px;
+        padding: 20px 10px;
+        font-size: 12px;
       }
     }
   }
