--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,3 +3,4 @@ $mint: #3b968b;
 $yellow-border: 5px solid #ffe8c8;
 $yellow: #fffde5;
 $yellow-border-small: 2px solid #ffe8c8;
+$orange: #ffe8c8;
